Modify parsing so we allow for more than one instances of = to appear. Also verify that the strings are not empty.

--- a/test.config
+++ b/test.config
@@ -8,5 +8,7 @@ user= user
 verbose =true
 test_mode = on
 debug_mode = off
+new_mode = false
 log_file_path = /tmp/logfile.log   
 send_notifications = yes
+disable_account = no
